# qtov

./: .env.example  .gitignore  .mcp.json  DEPLOY.md  Makefile  README.md  docker-compose.observability.yml  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  catalog.py  config.py  errors.py  main.py  mcp_server.py  ratelimit.py  validation.py
backend/app/agent/: interpreter.py  llm.py  orchestrator.py  prompts.py  summarize.py
backend/app/api/: deps.py  routes.py
backend/app/clients/: clinicaltrials.py
backend/app/db/: README.md  models.py  repositories.py  session.py
backend/app/observability/: logging.py  tracing.py
backend/app/schemas/: query.py  visualization.py
backend/app/services/: aggregate.py  citations.py  counts.py  network.py  scatter.py  search_cache.py  visualize.py
backend/evals/: eval_report.md  faithfulness.py  golden_set.py  metrics.py  run_evals.py  seed.py
backend/tests/: conftest.py  test_aggregate.py  test_api.py  test_citations.py  test_clinicaltrials.py  test_config.py  test_counts.py  test_evals_metrics.py  test_faithfulness.py  test_interpreter.py  test_llm.py  test_mcp_server.py  test_network.py  test_orchestrator.py  test_ratelimit.py  test_scatter.py  test_search_cache.py  test_summarize.py  test_validation.py  test_visualize.py
examples/: README.md  compare-phases-for-trials-involving-metformin-vs-semaglutide.json  compare-the-number-of-metformin-vs-semaglutide-trials-per-ye.json  how-are-diabetes-trials-distributed-across-phases.json  (+4 more)
(+27 files in other folders)
