[project]
name = "qtov-backend"
version = "0.1.0"
description = "ClinicalTrials.gov Query-to-Visualization Agent (backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pydantic-ai-slim[openai]>=2.0,<3",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "structlog>=24.1",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
# MCP server (app/mcp_server.py): exposes the query agent as MCP tools over stdio.
mcp = [
    "mcp>=1.2",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]
observability = [
    "logfire>=3.0",
    "opentelemetry-exporter-otlp>=1.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "UP042"]  # B008: FastAPI Depends(); UP042: str+Enum is intentional

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"evals/**" = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "silent"
plugins = ["pydantic.mypy"]
exclude = ["tests/", "evals/"]
